css/styles.css
* {
    box-sizing: border-box;

}


:root {
  --bg: #ffffff;
  --secondary: #000000;
  --highlight: #ffffff;
  --header-text: #fff333;
  --text: #1E1B4B;

}

:root[data-theme="dark-mode"] {
  --bg: #0B0722;
  --secondary: #342579;

  --highlight: #14E3AC;

  --header-text: #D0CBFF;
  --text: #8FA3E6;

  --border-subtle: #3E2A7F;

  --db-border: 2px solid var(--highlight);
}

:root[data-theme="light-mode"] {
  --bg: #DCE3FF;    
  --secondary: #CDD6FF;

  --highlight: #008CFF;    /* electric blue */

  --header-text: #0B0722;
  --text: #0B0722;

  --border-subtle: #B2C1FF;
}

html {
  overflow-x: visible;
  scroll-padding-top: 80px;
}

body {
    overflow-x: hidden;
    font-family: 'JetBrains Mono', monospace;
    font-size: 1.2em;
    color: var(--text);
    background-color: var(--bg);
}

button {
    /* background-color: var(--bg); */
    /* color: var(--highlight); */
    border: none;
    padding: 10px 20px;
    cursor: pointer;
    font-size: 1em;
}

h1 {
    text-align: center;
    color: var(--header-text);
}

.section-title {
    font-size: 2em;
    color: var(--header-text);
    margin-bottom: 0.5em;
}

.section-number {
    font-size: 1.5em;
    color: var(--highlight);
    margin-bottom: 0.5em;
}

.flex-item,
.grid-item {
    padding: 10px;
    font-size: 2.4em;
    text-align: center;
}

.flex-item{
    width: 160px;
    height: 80px;
    margin: 10px;
}

.section-header {
    border: #14E3AC 2px solid;
    display: flex;
    align-items: center;
    gap: 0.5em;
    margin-bottom: 1em;
}

section {
    display: block;
    border: var(--highlight) 2px solid;

    padding: clamp(1.5rem, 4vw, 4rem);
    margin: 4rem auto;
    width: min(100% - 2em, 800px);

    border: 1px solid var(--highlight);
    border-radius: 14px;
    box-shadow: 10px 10px 5px color-mix(in srgb, var(--highlight) 70%, transparent);

}


.text-links {
    text-decoration: none;
    color: var(--highlight);

    background-image: linear-gradient(currentColor, currentColor);
    background-position: 0 100%;
    background-size: 0% 2px;
    background-repeat: no-repeat;
    transition: background-size 0.1s ease;
}

.text-links:hover {
    background-size: 100% 2px;
}

.section-content {
    display: flex;
    flex-direction: column;
}

.section-content p {
    text-indent: 2em;
    font-size: .9em;
    margin-bottom: 1rem;
}

.section-content ul {
    align-self: center;
    gap: 10em;
    column-count: 2;
    margin-top: 0.5rem;
    margin-bottom: 0;
}


.about ul li {
    padding: 0.25em;
    font-size: .9em;
}

::selection {
    background-color: var(--highlight);
    color: var(--bg);
}

